Testing binary encoding